--- a/src/App.css
+++ b/src/App.css
@@ -28,10 +28,10 @@ html, body {
   align-items: center;
   flex-direction: column;
   padding: 3rem;
-  background-color: #0e0e0e;
-  opacity: 0.8;
-  color: #f2f2f2;
+  background-color: #f2f2f2;
+  color: #0e0e0e;
   border-radius: 1rem;
+  border: 5px solid #0e0e0e;
 }
 
 .Hiragana {
@@ -41,9 +41,9 @@ html, body {
 .input {
   outline: none;
   border: none;
-  border-bottom: 2px solid white;
+  border-bottom: 2px solid #0e0e0e;
   background-color: transparent;
-  color: white;
+  color: #0e0e0e;
   font-size: 2rem;
   font-family: sans-serif;
   text-align: center;
