--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,21 @@
+@keyframes success {
+  0% {
+    border-color: #21b36f;
+  }
+  100% {
+    border-color: #0e0e0e;
+  }
+}
+
+@keyframes failure {
+  0% {
+    border-color: #d43622;
+  }
+  100% {
+    border-color: #0e0e0e;
+  }
+}
+
 * {
   box-sizing: border-box;
 }
@@ -20,6 +38,7 @@ html, body {
   width: 100wv;
   background-size: cover;
   background-color: #0e0e0e;
+  transition: background-image 1s linear;
 }
 
 .Card {
@@ -31,7 +50,15 @@ html, body {
   background-color: #f2f2f2;
   color: #0e0e0e;
   border-radius: 1rem;
-  border: 5px solid #0e0e0e;
+  border: 10px solid #0e0e0e;
+}
+
+.correctAnswer {
+  animation: success 1.5s;
+}
+
+.incorrectAnswer {
+  animation: failure 1.5s;
 }
 
 .Hiragana {
