--- a/src/App.css
+++ b/src/App.css
@@ -36,7 +36,8 @@ html, body {
   justify-content: center;
   height: 100vh;
   width: 100wv;
-  background-size: cover;
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
   background-color: #0e0e0e;
   transition: background-image 1s linear;
 }
