--- a/src/App.css
+++ b/src/App.css
@@ -124,11 +124,14 @@ html, body {
   font-size: 2rem;
   padding: 1rem;
   width: 6rem;
+  border: 1px solid #0e0e0e;
+  border-radius: 2px;
 }
 
 @media only screen and (max-width : 480px) {
   .Card {
     padding: 1rem;
+    width: 100%;
   }
   .Hiragana {
     font-size: 8rem;
