--- a/src/App.css
+++ b/src/App.css
@@ -139,4 +139,9 @@ html, body {
   .input {
     font-size: 1.6rem;
   }
+
+  .background {
+    align-items: flex-end;
+    padding-bottom: 12rem;
+  }
 }
