--- a/src/App.css
+++ b/src/App.css
@@ -20,7 +20,8 @@
   box-sizing: border-box;
 }
 
-html, body {
+html,
+body {
   width: 100%;
   height: 100%;
   overflow: hidden;
@@ -128,7 +129,7 @@ html, body {
   border-radius: 2px;
 }
 
-@media only screen and (max-width : 480px) {
+@media only screen and (max-width: 480px) {
   .Card {
     padding: 1rem;
     width: calc(100% - 2rem);
